<resources>
    <string name="app_name">Clops Colors</string>

    <string name="trancicionInico">inicioTran</string>
    <string name="trancicionFace">faceTran</string>
    <string name="trancicionUsuario">usuTran</string>
    <string name="trancicionContra">contraTran</string>
    <string name="trancicionIconoInico">imagenTran</string>
    <string name="textoInfo1">Clops Colors</string>
    <string name="textoInfo2">Es la visión del \nfuturo inmediato, más que un videojuego.. \nEs una integración del mundo real con el digital.\n\nLlega a lo más alto del ranking para participar por nuestro premios SEMANALES\n</string>
    <string name="textoCompetir">¡ Competir !</string>
    <string name="textoCompetencia">Competir</string>
    <string name="textoJugar">¡ Jugar !</string>

    <string name="sinPuesto">Sin puesto</string>


    <string name="nuevoRecord">¡NUEVO RECORD!</string>

    <string name="infoNiveles1">Mejoras</string>
    <string name="playError">¡ Presiona el botón PLAY para empezar !</string>
    <string name="cuentaError">¡ Espera que empiece la partida !</string>
    <string name="contador">15</string>

    <string name="sinFace">La aplicación no está instalada</string>

    <string name="sinVideo">Debes terminar el vídeo para multiplicar tus Clops.</string>

    <string name="facebook_app_id">269100503727184</string>

    <string name="puntos">Tus Clops</string>
    <string name="premios">Premios</string>
    <string name="nuevosPuntos">¡Nuevos Clops!</string>

    <string name="clopsAcumulados">Clops acumulados en partidas normales.</string>
    <string name="intentos">Intentos restantes :</string>
    <string name="sinIntentos">No tienes más intentos\nJuega partidas normales, acumula clops y canjéalos por un intento.</string>
    <string name="sinRankingPlay">¡ El ranking está cerraado !</string>
    <string name="sinRanking">El ranking está cerrado\nPero tus Clops se guardaron para el ranking siguiente</string>
    <string name="tituloIntentos">Clops acumulados</string>
    <string name="botonIntentos">Canjear clops</string>

    <string name="conexionGoogle">Demasiadas conexiones seguidas, espera 15 segundos.</string>

    <string name="sinNumero">Te contactaremos por correo.\n¡Que lo disfrutes!</string>
    <string name="conNumero">Te contactaremos por teléfono y por correo.\n¡Que lo disfrutes!</string>

    <string name="falloMensaje">Necesitas <b>10000</b> clops para canjear por un intento</string>
    <string name="felicidadesMensaje">Tus clops han sido canjeados exitosamente</string>

    <string name="tituloAlerta">Inicio de sesión</string>
    <string name="textoAlerta">¡ Debes iniciar sesión antes de poder competir !</string>
    <string name="botonAlerta">Iniciar sesión</string>

    <string name="tituloAlertaInternet">Sin internet</string>
    <string name="textoAlertaInternet">¡ No hay conexión a internet !</string>
    <string name="botonAlertaInternet">Okas</string>

    <string name="tituloRecuerdp">¡ CLOPS EXTRA !</string>
    <string name="textoRecuerdo">Los jugadores que <b>HOY</b>\nsuban una HISTORIA con el hashtag <b>#ClopSeandoAndo</b> y etiqueten a <b>5</b> de nuestras\n MARCAS ALIADAS\n\n¡ Obtendrán <b>1000</b> Clops extra en su ranking !\n\nNo olvides escribir el nombre que tienes dentro del juego.</string>
    <string name="botonRecuerdo">Epaaaa</string>

    <string name="tituloAlertaGanador">¡ ERES UN GANADOR !</string>
    <string name="textoAlertaGanador">Te contactaremos por correo.\nDéjanos tu teléfono para contactarte si así lo prefieres.\n\n¡ DISFRÚTALO !</string>
    <string name="telefonoGanador">Teléfono de contacto</string>
    <string name="botonAlertaGanador">Genial</string>

    <string name="tituloAlertaActu">Ranking cerrado</string>
    <string name="textoAlertaActu">¡ Debes actualizar el juego para competir !</string>
    <string name="botonAlertaActu">Okas</string>

    <string name="tituloAlertaTuto">Tutorial</string>
    <string name="textoAlertaTuto">¿ Quieres realizar el tutorial ?</string>
    <string name="botonAlertaNo">Soy pro</string>
    <string name="botonAlertaSi">Si</string>

    <string name="tituloCompetir">¿ Eres pro ?</string>
    <string name="mensajeCompetir">Es tu primera competencia, te sientes capaz ?</string>
    <string name="botonCompetirNo">Practicar</string>
    <string name="botonCompetirSi">Epa</string>

    <string name="tituloPartida">Partida perdida</string>
    <string name="mensajePartida">¿ Quieres empezar de nuevo ?</string>
    <string name="botonPartidaNo">No</string>
    <string name="botonPartidaSi">Si</string>

    <string name="record">Record: </string>
    <string name="multiplica">¡ Multiplica !</string>

    <string name="tituloPremios">¡ Gánate una cena !</string>
    <string name="leyendaPremios">¡ Entérate !</string>
    <string name="botonPremios">Siguiente</string>

    <string name="textoTuto">Tutorial</string>
    <string name="textoFacil">Fácil</string>
    <string name="textoNormal">Normal</string>
    <string name="textoDificil">Difícil</string>

    <string name="infoExplo">Explosión de colores</string>
    <string name="infoMitad">Medio tablero</string>
    <string name="infoVidas">Vidas extra</string>
    <string name="infoTiempo">Reajustar Tiempo</string>

    <string name="infoExplicacionExplo">Llega hasta la ronda <b>13</b> y tendrás una explosión de colores</string>
    <string name="infoExplicacionMitad">Consigue <b>120</b>\nclops seguidos y podrás jugar en un tablero reducido</string>
    <string name="infoExplicacionVidas">Consigue <b>70</b> clops seguidos y\npodrás reclamar 3 vidas extra en tu partida</string>
    <string name="infoExplicacionTiempo">Llega hasta la ronda <b>8</b> y podrás volver el tiempo lento por 10 segundos además de reiniciar los tiempos de reacción</string>

    <string name="explicacionMejoras">Explicación de mejoras</string>
    <string name="expliMejoras">\n\nAquí te explicamos como conseguir las diferentes mejoras y bonus del juego.\n\nSolo presiona en ellas\n</string>


    <string name="textoNoSesion">No iniciaste sesión</string>
    <string name="errorSesion">Hubo un error a iniciar sesión</string>
</resources>
