<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/tituloAlerta"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:textAlignment="center"
                    app:autoSizeTextType="uniform"
                    android:text="@string/tituloIntentos"
                    android:textColor="@color/blanco"/>

                <TextView
                    android:id="@+id/mensajeAlerta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textColor="@color/blanco"
                    android:text="@string/textoAlerta"
                    android:layout_marginTop="30dp"/>

                <FrameLayout
                    android:layout_marginTop="35dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/botonAlerta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="6dp"
                    android:foreground="?selectableItemBackground"
                    android:background="@drawable/blanco">

                    <TextView
                        android:id="@+id/textoBotonAlerta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="3dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:gravity="center"
                        android:text="@string/botonAlerta"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp" />
                </FrameLayout>

            </LinearLayout>

        </RelativeLayout>
        <LinearLayout
            android:layout_marginBottom="15dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:visibility="invisible"
                android:layout_marginEnd="50dp"
                android:id="@+id/botonNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:elevation="6dp"
                android:foreground="?selectableItemBackground"
                android:background="@drawable/blanco">

                <TextView
                    android:id="@+id/textoBotonNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:text="@string/botonAlertaNo"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />
            </FrameLayout>
            <FrameLayout
                android:visibility="invisible"
                android:id="@+id/botonSi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:elevation="6dp"
                android:foreground="?selectableItemBackground"
                android:background="@drawable/blanco">

                <TextView
                    android:id="@+id/textoBotonSi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/botonAlertaSi"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp" />
            </FrameLayout>

        </LinearLayout>
        <FrameLayout
            android:visibility="invisible"
            android:layout_marginBottom="15dp"
            android:layout_gravity="bottom|center"
            android:id="@+id/botonIntentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:elevation="6dp"
            android:foreground="?selectableItemBackground"
            android:background="@drawable/blanco">

            <TextView
                android:id="@+id/textoBotonIntentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center"
                android:text="@string/botonIntentos"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp" />
        </FrameLayout>


    </android.support.v7.widget.CardView>



</RelativeLayout>