<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tituloRecuerdp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textAlignment="center"
                app:autoSizeTextType="uniform"
                android:text="@string/tituloRecuerdp"
                android:textColor="@color/blanco"/>

            <TextView
                android:gravity="center"
                android:id="@+id/textoRecuerdo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:autoSizeTextType="uniform"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textAlignment="center"
                android:textColor="@color/blanco"
                android:text="@string/textoRecuerdo" />

            <FrameLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/botonRecuerdo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:elevation="6dp"
                android:foreground="?selectableItemBackground"
                android:background="@drawable/blanco">

                <TextView
                    android:id="@+id/textoBotonRecuerdo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:gravity="center"
                    android:text="@string/botonRecuerdo"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp" />
            </FrameLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>